<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login_back"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/skip_btn"
                    style="@style/aixiyi_skip_btn"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="@dimen/common_margin_top"
                    android:layout_marginRight="@dimen/aixiyi_normal_right"
                    android:text="@string/user_skip"
                    android:textColor="@color/white"
                    android:textSize="@dimen/aixiyi_skip" />
            </RelativeLayout>

            <TextView
                style="@style/aixiyi_header_txt"
                android:layout_width="79dp"
                android:layout_height="79dp"
                android:layout_marginTop="83dp"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="@dimen/aixiyi_normal" />
            <EditText
                android:id="@+id/tel_edt"
                style="@style/aixiyi_input_edt"
                android:layout_width="@dimen/aixiyi_input_width"
                android:layout_height="30dp"
                android:layout_marginTop="50dp"
                android:hint="@string/lr_tel_txt"
                 />
            <include
                layout="@layout/login_line_lay"
                />
            <EditText
                android:id="@+id/pass_edt"
                style="@style/aixiyi_input_edt"
                android:layout_width="@dimen/aixiyi_input_width"
                android:layout_height="30dp"
                android:layout_marginTop="32dp"
                android:hint="@string/lr_pass_txt"
                android:password="true"/>
            <include
                layout="@layout/login_line_lay"
                />
            <RelativeLayout
                android:layout_width="@dimen/aixiyi_input_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal">
                <TextView
                    android:id="@+id/forget_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text="@string/forget_pass"
                    android:textColor="@color/aixiyi_control_blue"
                    android:textSize="@dimen/aixiyi_small" />
            </RelativeLayout>
            <Button
                android:id="@+id/gz_result_btn"
                android:layout_width="@dimen/aixiyi_btn_width"
                android:layout_height="@dimen/aixiyi_btn_hight"
                android:layout_marginTop="64dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/login_result_btn"
                android:text="@string/login"
                android:textColor="@color/aixiyi_center_txt_blue"
                android:textSize="@dimen/aixiyi_normal"/>
            <Button
                android:id="@+id/register_btn"
                android:layout_width="@dimen/aixiyi_btn_width"
                android:layout_height="@dimen/aixiyi_btn_hight"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/register_result_btn"
                android:text="@string/regiester"
                android:textColor="@color/white"
                android:textSize="@dimen/aixiyi_normal"/>
            <TextView
                android:id="@+id/aixiyi_xieyi_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lr_xieyi"
                android:layout_marginTop="17dp"
                android:textColor="@color/aixiyi_center_txt_blue"
                android:textSize="@dimen/aixiyi_small"
                android:layout_gravity="center_horizontal"/>
            <View
                android:layout_width="205dp"
                android:layout_height="@dimen/common_margin_status"
                android:background="@color/aixiyi_center_txt_blue"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="24dp"
                />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
